agregando al menu reporte de cuentas con saldo

--- a/views/layout.html
+++ b/views/layout.html
@@ -521,6 +521,10 @@ input[type=button]{
 						<a href="#"><i class="fa fa-lg fa-fw fa-bar-chart-o"></i> <span class="menu-item-parent">Reportes</span></a>
 						<ul>
 							<li>
+                                <a href="{{=URL('cc_empresa','cc_grid2')}}">
+									<i class="fa fa-bar-chart-o"></i>
+									Cuentas con Saldo
+								</a>
 								<a href="#">
 									<i class="fa fa-bar-chart-o"></i>
 									Balance general
