--- a/views/cc_empresa/cc_grid2.html
+++ b/views/cc_empresa/cc_grid2.html
@@ -1,23 +1,90 @@
 {{extend 'layout.html'}}
 
 <script>
-    
     $(function() {
-	$('tr.parent')
-		.css("cursor","pointer")
-		.attr("title","Click to expand/collapse")
-		.click(function(){
-			$(this).siblings('.child-'+this.id).toggle();
-		});
-    
                                          
-    $('#sel_tipo_cuentas').on('change', function (e) {
-        tipo_cuentas=$(this).val();
-        if (tipo_cuentas!='0'){
-            $( "#div_cat_cuentas" ).load( '{{=URL('ul_list2')}}', { tipo_cuentas: tipo_cuentas });
-        }
-    });
+        $('#sel_tipo_cuentas').on('change', function (e) {
+            
+            tipo_cuentas=$(this).val();
+            if (tipo_cuentas!='0'){
+                $( "#div_cat_cuentas" ).load( '{{=URL('ul_list2')}}', { tipo_cuentas: tipo_cuentas }, function(){
+                        $('tr')
+                        .filter(function() {
+                            return this.id.match(/\d./);
+                        }).hide();
+                    
+                        $('tr.padre')
+			.css("cursor","pointer")
+			.attr("title","Click para abrir/cerrar")
+			.click(function(){
+
+				var id = $(this).attr('id');
+				var exp = new RegExp("^"+id+".");
+                var exp2 = new RegExp("^"+id+"[0-9]$");
+                var btn = $(this).find('i');
+				if ($(btn).hasClass('fa-minus-circle')){
+					$(btn).removeClass( "fa-minus-circle" ).addClass( "fa-plus-circle" );
+                    if( $('tr').filter(function() {    return this.id.match(exp);    }).is(':visible') ){
+                        $('tr').filter(function() {
+                            return this.id.match(exp);
+                        }).hide(function(){
+                            var btn_i = $(this).find('i');
+                            $(btn_i).removeClass( "fa-minus-circle" ).addClass( "fa-plus-circle" );
+                        });
+                    }
+				}else{
+					$(btn).removeClass( "fa-plus-circle" ).addClass( "fa-minus-circle" );
+                    if( $('tr').filter(function() {    return this.id.match(exp2);    }).is(':hidden') ){
+                        $('tr').filter(function() {
+                            return this.id.match(exp2);
+                        }).show();
+                    }
+				}
+				
+			});
+                    });
+            }
+        });
         
+        $(document).ready(function(){
+			$('tr')
+		    .filter(function() {
+		        return this.id.match(/\d./);
+		    }).hide();
+            
+        });
+        
+    $('tr.padre')
+			.css("cursor","pointer")
+			.attr("title","Click para abrir/cerrar")
+			.click(function(){
+
+				var id = $(this).attr('id');
+				var exp = new RegExp("^"+id+".");
+                var exp2 = new RegExp("^"+id+"[0-9]$");
+                var btn = $(this).find('i');
+				if ($(btn).hasClass('fa-minus-circle')){
+					$(btn).removeClass( "fa-minus-circle" ).addClass( "fa-plus-circle" );
+                    if( $('tr').filter(function() {    return this.id.match(exp);    }).is(':visible') ){
+                        $('tr').filter(function() {
+                            return this.id.match(exp);
+                        }).hide(function(){
+                            var btn_i = $(this).find('i');
+                            $(btn_i).removeClass( "fa-minus-circle" ).addClass( "fa-plus-circle" );
+                        });
+                    }
+				}else{
+					$(btn).removeClass( "fa-plus-circle" ).addClass( "fa-minus-circle" );
+                    if( $('tr').filter(function() {    return this.id.match(exp2);    }).is(':hidden') ){
+                        $('tr').filter(function() {
+                            return this.id.match(exp2);
+                        }).show();
+                    }
+				}
+				
+			});
+        
+    
 });
     
 </script>
