--- a/views/cc_empresa/cc_grid2.html
+++ b/views/cc_empresa/cc_grid2.html
@@ -2,9 +2,9 @@
 
 <script>
     $(function() {
-                                         
+
         $('#sel_tipo_cuentas').on('change', function (e) {
-            
+
             tipo_cuentas=$(this).val();
             if (tipo_cuentas!='0'){
                 $( "#div_cat_cuentas" ).load( '{{=URL('ul_list2')}}', { tipo_cuentas: tipo_cuentas }, function(){
@@ -12,18 +12,18 @@
                         .filter(function() {
                             return this.id.match(/\d./);
                         }).hide();
-                    
-                        $('tr.padre')
-			.css("cursor","pointer")
-			.attr("title","Click para abrir/cerrar")
-			.click(function(){
 
-				var id = $(this).attr('id');
-				var exp = new RegExp("^"+id+".");
-                var exp2 = new RegExp("^"+id+"[0-9]$");
+                        $('tr.padre')
+            .css("cursor","pointer")
+            .attr("title","Click para abrir/cerrar")
+            .click(function(){
+
+                var id = $(this).attr('id');
+                var exp = new RegExp("^"+id+".");
+                var exp2 = new RegExp("^"+id+".[0-9]+$");//mostrar
                 var btn = $(this).find('i');
-				if ($(btn).hasClass('fa-minus-circle')){
-					$(btn).removeClass( "fa-minus-circle" ).addClass( "fa-plus-circle" );
+                if ($(btn).hasClass('fa-minus-circle')){
+                    $(btn).removeClass( "fa-minus-circle" ).addClass( "fa-plus-circle" );
                     if( $('tr').filter(function() {    return this.id.match(exp);    }).is(':visible') ){
                         $('tr').filter(function() {
                             return this.id.match(exp);
@@ -32,39 +32,39 @@
                             $(btn_i).removeClass( "fa-minus-circle" ).addClass( "fa-plus-circle" );
                         });
                     }
-				}else{
-					$(btn).removeClass( "fa-plus-circle" ).addClass( "fa-minus-circle" );
+                }else{
+                    $(btn).removeClass( "fa-plus-circle" ).addClass( "fa-minus-circle" );
                     if( $('tr').filter(function() {    return this.id.match(exp2);    }).is(':hidden') ){
                         $('tr').filter(function() {
                             return this.id.match(exp2);
                         }).show();
                     }
-				}
-				
-			});
+                }
+
+            });
                     });
             }
         });
-        
-        $(document).ready(function(){
-			$('tr')
-		    .filter(function() {
-		        return this.id.match(/\d./);
-		    }).hide();
-            
-        });
-        
-    $('tr.padre')
-			.css("cursor","pointer")
-			.attr("title","Click para abrir/cerrar")
-			.click(function(){
 
-				var id = $(this).attr('id');
-				var exp = new RegExp("^"+id+".");
-                var exp2 = new RegExp("^"+id+"[0-9]$");
+        $(document).ready(function(){
+            $('tr')
+            .filter(function() {
+                return this.id.match(/\d./);
+            }).hide();
+
+        });
+
+    $('tr.padre')
+            .css("cursor","pointer")
+            .attr("title","Click para abrir/cerrar")
+            .click(function(){
+
+                var id = $(this).attr('id');
+                var exp = new RegExp("^"+id+".");
+                var exp2 = new RegExp("^"+id+".[0-9]+$");//mostrar
                 var btn = $(this).find('i');
-				if ($(btn).hasClass('fa-minus-circle')){
-					$(btn).removeClass( "fa-minus-circle" ).addClass( "fa-plus-circle" );
+                if ($(btn).hasClass('fa-minus-circle')){
+                    $(btn).removeClass( "fa-minus-circle" ).addClass( "fa-plus-circle" );
                     if( $('tr').filter(function() {    return this.id.match(exp);    }).is(':visible') ){
                         $('tr').filter(function() {
                             return this.id.match(exp);
@@ -73,20 +73,20 @@
                             $(btn_i).removeClass( "fa-minus-circle" ).addClass( "fa-plus-circle" );
                         });
                     }
-				}else{
-					$(btn).removeClass( "fa-plus-circle" ).addClass( "fa-minus-circle" );
+                }else{
+                    $(btn).removeClass( "fa-plus-circle" ).addClass( "fa-minus-circle" );
                     if( $('tr').filter(function() {    return this.id.match(exp2);    }).is(':hidden') ){
                         $('tr').filter(function() {
                             return this.id.match(exp2);
                         }).show();
                     }
-				}
-				
-			});
-        
-    
+                }
+
+            });
+
+
 });
-    
+
 </script>
 
 
@@ -137,12 +137,12 @@
                                                           <option value="0">Elija el tipo de cuenta</option>
                                                           <option value="con_saldo">Cuentas con saldo</option>
                                                           <option value="todas">Todas las cuentas</option>
-                                                        </select> 
+                                                        </select>
                                                         <br><br>
                                                         <div id="div_cat_cuentas">
                                                              {{=cc_empresa}}
                                                         </div>
-                                                        
+
                                                     </ul>
                                                                                                 </div>
                                                                                         </div>
