--- a/views/cc_empresa/cc_grid2.html
+++ b/views/cc_empresa/cc_grid2.html
@@ -88,7 +88,14 @@
 });
 
 </script>
+<style>
 
+table > tbody > tr:hover{
+    background-color: #eee;
+    background-image: -moz-linear-gradient(center top , #f2f2f2 0px, #fafafa 100%);
+}
+
+</style>
 
 
 
