--- a/views/layout.html
+++ b/views/layout.html
@@ -525,7 +525,7 @@ input[type=button]{
 									<i class="fa fa-bar-chart-o"></i>
 									Cuentas con Saldo
 								</a>
-								<a href="#">
+								 <a href="{{=URL('reportes','balance_general')}}">
 									<i class="fa fa-bar-chart-o"></i>
 									Balance general
 								</a>
