Ajustes del balance general, estilos, iconos, rutas, y el pbalance general en construccion

--- a/views/layout.html
+++ b/views/layout.html
@@ -522,12 +522,16 @@ input[type=button]{
 						<ul>
 							<li>
                                 <a href="{{=URL('cc_empresa','cc_grid2')}}">
-									<i class="fa fa-bar-chart-o"></i>
+									<i class="fa fa-list-ol"></i>
 									Cuentas con Saldo
 								</a>
 								 <a href="{{=URL('reportes','balance_general')}}">
 									<i class="fa fa-bar-chart-o"></i>
 									Balance general
+								</a>
+								<a href="{{=URL('reportes','libro_diario')}}">
+									<i class="fa fa-book"></i>
+									Libro diario
 								</a>
 								<a href="#">
 									<i class="fa fa-lg fa-fw fa-usd"></i>
