--- a/views/cc_empresa/cc_grid2.html
+++ b/views/cc_empresa/cc_grid2.html
@@ -122,7 +122,7 @@ table > tbody > tr:hover{
                                                                         <h2>Catalogo Cuentas Contables</h2>
                                                                         <ul class="nav nav-tabs pull-right in" id="myTab">
                                                                                 <li class="active">
-                                                                                        <a data-toggle="tab" href="#s1"><i class="fa fa-bar-chart-o"></i> <span class="hidden-mobile hidden-tablet">Listado</span></a>
+                                                                                        <a data-toggle="tab" href="#s1"><i class="fa fa-list-ol"></i> <span class="hidden-mobile hidden-tablet">Listado</span></a>
                                                                                 </li>
                                                                         </ul>
                                                                 </header>
