--- a/views/reportes/balance_general.html
+++ b/views/reportes/balance_general.html
@@ -1,7 +1,25 @@
 {{extend 'layout.html'}}
 
 <link href="{{=URL('static', 'css/tabs.css')}}" rel="stylesheet">
+<style>
+table > tbody > tr{
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    color: #212C7F;
+}
+table > tbody > tr:hover{
+    background-color: #eee;
+    background-image: -moz-linear-gradient(center top , #f2f2f2 0px, #fafafa 100%);
+    background-image: -webkit-linear-gradient(center top , #f2f2f2 0px, #fafafa 100%);
+    background-image: -o-linear-gradient(center top , #f2f2f2 0px, #fafafa 100%);
+    background-image: -ms-linear-gradient(center top , #f2f2f2 0px, #fafafa 100%);
+    background-image: linear-gradient(center top , #f2f2f2 0px, #fafafa 100%);
+    -ms-transform: scale(1.08,1.08); /* IE 9 */
+    -webkit-transform: scale(1.08,1.08); /* Chrome, Safari, Opera */
+    transform: scale(1.08,1.08);
+}
 
+</style>
 <div id="modal_editar" class="modalmask">
     <div class="modalbox movedown">
         <a href="#close" title="Cerrar" class="close">X</a>
@@ -9,7 +27,7 @@
         <div id="form_editar">
         </div>
     </div>
-</div> 
+</div>
 
 <div id="modal_crear" class="modalmask">
     <div class="modalbox movedown">
@@ -40,8 +58,8 @@
                                                                 data-widget-sortable="false"
                                                                 -->
                                                                 <header>
-                                                                        <span class="widget-icon"> <i class="fa fa-building txt-color-darken"></i> </span>
-                                                                        <h2>Catalogo Cuentas Contables</h2>
+                                                                        <span class="widget-icon"> <i class="fa fa-bar-chart-o txt-color-darken"></i> </span>
+                                                                        <h2 style="font-weight: bold">Balance General</h2>
                                                                         <ul class="nav nav-tabs pull-right in" id="myTab">
                                                                                 <li class="active">
                                                                                         <a data-toggle="tab" href="#s1"><i class="fa fa-bar-chart-o"></i> <span class="hidden-mobile hidden-tablet">Listado</span></a>
@@ -61,9 +79,6 @@
                                                                                         <div class="tab-pane fade active in padding-10 no-padding-bottom" id="s1">
                                                 <div class="padding-10">
                                                     <ul id="expList">
-                                                        <h1>
-                                                            Balance General
-                                                        </h1>
                                                         {{=balance}}
                                                     </ul>
                                                                                                 </div>
