--- a/static/css/tabs.css
+++ b/static/css/tabs.css
@@ -26,9 +26,14 @@ h1{
   display: table-cell;
 }
 
+input{
+	font-size:13px;
+	margin:0px;
+	padding: 0px;
+	
+}
 
 .fila:hover{
-    font-weight:bold;
 	color: #444;
     -webkit-text-shadow: 0 1px 0 #fff;
 	text-shadow: 0 1px 0 #fff;
