--- a/views/layout.html
+++ b/views/layout.html
@@ -537,14 +537,23 @@ input[type=button]{
 						</ul>
 					</li>
 					<li>
-						<a href="#"><i class="fa fa-lg fa-fw fa-cog"></i> <span class="menu-item-parent">Configuraciones</span></a>
+						<a href="#"><i class="fa fa-lg fa-fw fa-cog"></i> <span class="menu-item-parent"> Configuraciones</span></a>
 						<ul>
                             <li>
-                                <a href="#"><i class="fa fa-fw fa-folder-open"></i>Catalogos</a>
+                                <a href="#"><i class="fa fa-fw fa-folder-open"></i> Catalogos</a>
                                 <ul>
 
                                     <li>
                                         <a href="{{=URL('cc_empresa','cc_grid')}}"><i class="fa fa-fw "></i> Cuentas Contables </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa fa-lg fa-fw fa-bar-chart-o"></i> Reportes</a>
+                                <ul>
+
+                                    <li>
+                                        <a href="{{=URL('configuracion','estado_resultados')}}"><i class="fa fa-fw "></i> Estado de Resultados </a>
                                     </li>
                                 </ul>
                             </li>
