--- a/views/default/index.html
+++ b/views/default/index.html
@@ -1,71 +1,82 @@
 {{extend 'layout.html'}}
 
-				<!-- widget grid -->
-				<section id="widget-grid" class="">
-					<!-- row -->
-					<div class="row">
-						<article class="col-sm-12">
-							<!-- new widget -->
-							<div class="jarviswidget" id="wid-id-0" data-widget-togglebutton="false" data-widget-editbutton="false" data-widget-fullscreenbutton="false" data-widget-colorbutton="false" data-widget-deletebutton="false">
-								<!-- widget options:
-								usage: <div class="jarviswidget" id="wid-id-0" data-widget-editbutton="false">
-								data-widget-colorbutton="false"
-								data-widget-editbutton="false"
-								data-widget-togglebutton="false"
-								data-widget-deletebutton="false"
-								data-widget-fullscreenbutton="false"
-								data-widget-custombutton="false"
-								data-widget-collapsed="true"
-								data-widget-sortable="false"
-								-->
-								<header>
-									<span class="widget-icon"> <i class="fa fa-building txt-color-darken"></i> </span>
-									<h2>{{if session.auth:}}
-                                             Bienvenido: {{=auth.user['first_name'] + ' ' + auth.user['last_name']}}
-                                        {{else:}}
-                                            Sesión no iniciada.
+<!-- widget grid -->
+<section id="widget-grid" class="">
+<!-- row -->
+<div class="row">
+    <article class="col-sm-12">
+    <!-- new widget -->
+    <div class="jarviswidget" id="wid-id-0" data-widget-togglebutton="false" data-widget-editbutton="false" data-widget-fullscreenbutton="false" data-widget-colorbutton="false" data-widget-deletebutton="false">
+        <!-- widget options:
+        usage: <div class="jarviswidget" id="wid-id-0" data-widget-editbutton="false">
+            data-widget-colorbutton="false"
+            data-widget-editbutton="false"
+            data-widget-togglebutton="false"
+            data-widget-deletebutton="false"
+            data-widget-fullscreenbutton="false"
+            data-widget-custombutton="false"
+            data-widget-collapsed="true"
+            data-widget-sortable="false"
+            -->
+            <header>
+            <span class="widget-icon"> <i class="fa fa-building txt-color-darken"></i> </span>
+            <h2>{{if session.auth:}}
+                Bienvenido: {{=auth.user['first_name'] + ' ' + auth.user['last_name']}}
+                {{else:}}
+                Sesión no iniciada.
+                {{pass}}
+            </h2>
+            <ul class="nav nav-tabs pull-right in" id="myTab">
+                <li class="active">
+                <a data-toggle="tab" href="#s1"><i class="fa fa-bar-chart-o"></i> <span class="hidden-mobile hidden-tablet">Listado</span></a>
+                </li>
+            </ul>
+            </header>
+            <!-- widget div-->
+            <div class="no-padding">
+                <!-- widget edit box -->
+                <div class="jarviswidget-editbox">
+                    test
+                </div>
+                <!-- end widget edit box -->
+                <div class="widget-body">
+                    <!-- content -->
+                    <div id="myTabContent" class="tab-content">
+                        <div class="tab-pane fade active in padding-10 no-padding-bottom" id="s1">
+                            <div class="padding-10">
+                                <ul id="expList">
+                                    {{if session.auth:}}
+
+                                    <strong>Empresas creadas por ti:</strong><br>
+                                    {{if mias:}}
+                                        {{for m in mias:}}
+                                            {{=m.razon_social}}<br>
                                         {{pass}}
-                                    </h2>
-									<ul class="nav nav-tabs pull-right in" id="myTab">
-										<li class="active">
-											<a data-toggle="tab" href="#s1"><i class="fa fa-bar-chart-o"></i> <span class="hidden-mobile hidden-tablet">Listado</span></a>
-										</li>
-									</ul>
-								</header>
-								<!-- widget div-->
-								<div class="no-padding">
-									<!-- widget edit box -->
-									<div class="jarviswidget-editbox">
-										test
-									</div>
-									<!-- end widget edit box -->
-									<div class="widget-body">
-										<!-- content -->
-										<div id="myTabContent" class="tab-content">
-											<div class="tab-pane fade active in padding-10 no-padding-bottom" id="s1">
-                                                <div class="padding-10">
-                                                    <ul id="expList">
-                                                        {{if session.auth:}}
-                                                            Empresas creadas por ti:
-                                                            {{=db((db.mi_empresa.user_id==auth.user['id']) & (db.mi_empresa.tipo==1) ).select()}}
-                                                            Empresas compartidas contigo:
-                                                            {{=db((db.mi_empresa.user_id==auth.user['id']) & (db.mi_empresa.tipo==2) ).select()}}
-                                                        {{else:}}
-                                                            Sesión no iniciada.
-                                                        {{pass}}
-                                                    </ul>
-												</div>
-											</div>
-											<!-- end s1 tab pane -->
-										</div>
-										<!-- end content -->
-									</div>
-								</div>
-								<!-- end widget div -->
-							</div>
-							<!-- end widget -->
-						</article>
-					</div>
-					<!-- end row -->
-				</section>
-				<!-- end widget grid -->
+                                    {{pass}}
+
+                                    <strong>Empresas compartidas contigo:</strong><br>
+                                    {{if compartidas:}}
+                                        {{for c in compartidas:}}
+                                            {{=c.razon_social}}<br>
+                                        {{pass}}
+                                    {{pass}}
+
+                                    {{else:}}
+                                    Sesión no iniciada.
+                                    {{pass}}
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- end s1 tab pane -->
+                    </div>
+                    <!-- end content -->
+                </div>
+            </div>
+            <!-- end widget div -->
+        </div>
+        <!-- end widget -->
+        </article>
+    </div>
+    <!-- end row -->
+    </section>
+    <!-- end widget grid -->
