--- a/views/cc_empresa/cc_wizard.html
+++ b/views/cc_empresa/cc_wizard.html
@@ -154,7 +154,7 @@ $(function (){
                 cc_preconf = $('#sel_preconf_cc').val();
 
                 $.post('{{=URL('wiz_cc')}}',{empresa_id:empresa_id, cc_preconf:cc_preconf}).success(function(data){
-                    window.location = "{{=URL('cc_empresa','index')}}/1"
+                    window.location = "{{=URL('cc_empresa','index')}}/" + empresa_id;
                 });
             });
         });
