Corrección en la sección de pólizas

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -106,6 +106,7 @@
                 data: {id: id},
                 success: function (response) {
                     console.log('good');
+                    location.reload();
                 },
                 error: function (response) {
                     console.log('bad');
