Versión 0.0.0 del hash

--- a/views/cc_empresa/cc_wizard.html
+++ b/views/cc_empresa/cc_wizard.html
@@ -153,7 +153,7 @@ $(function (){
                 empresa_id={{=request.vars.empresa_id}};
                 cc_preconf = $('#sel_preconf_cc').val();
 
-                $.post('{{=URL('wiz_cc')}}',{empresa_id:empresa_id, cc_preconf:cc_preconf}).success(function(data){
+                $.post("{{=URL('wiz_cc')}}", {empresa_id:empresa_id, cc_preconf:cc_preconf}).success(function(data){
                     window.location = "{{=URL('cc_empresa','index')}}/" + empresa_id;
                 });
             });
