--- a/views/default/empresa_wizard.html
+++ b/views/default/empresa_wizard.html
@@ -100,13 +100,9 @@
     <div class='row'>
         <div class='col-md-3'><label>{{=form.custom.label.dir_num_int}}</label></div>
         <div class='col-md-5'>
-            {{=form.custom.widget.dir_num_int}}
-        </div>
-    </div>
-    <div class='row'>
-        <div class='col-md-3'><label>{{=form.custom.label.dir_colonia}}</label></div>
-        <div class='col-md-5'>
-            {{=form.custom.widget.dir_colonia}}
+            <input id="_no_table_dir_num_int" class="string" 
+            type="text" value="" name="dir_num_int">
+            {{#=form.custom.widget.dir_num_int}}
         </div>
     </div>
     <div class='row'>
