Estado de Resultados

--- a/views/layout.html
+++ b/views/layout.html
@@ -556,7 +556,7 @@ header,h1,h2,h3,h4{
 							<li>
                                 <a href="{{=URL('cc_empresa','cc_grid2')}}">
 									<i class="fa fa-list-ol"></i>
-									Cuentas con Saldo
+									Cuentas con saldo
 								</a>
 								 <a href="{{=URL('reportes','balance_general')}}">
 									<i class="fa fa-bar-chart-o"></i>
@@ -569,6 +569,10 @@ header,h1,h2,h3,h4{
 								<a href="#">
 									<i class="fa fa-lg fa-fw fa-usd"></i>
 									Balanza
+								</a>
+                                <a href="{{=URL('reportes','estado_resultados')}}">
+									<i class="fa fa-lg fa-fw fa-usd"></i>
+									Estado de resultados
 								</a>
 							</li>
 						</ul>
