--- a/views/reportes/cuentas_especificas.html
+++ b/views/reportes/cuentas_especificas.html
@@ -61,13 +61,13 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label">Nombre del Reporte</label>
                     <div class="col-md-10">
-                        <input id="etiqueta" class="form-control" placeholder="Nombre del reporte" type="text">
+                        <input id="etiqueta" class="form-control" style="width:450px;" placeholder="Nombre del reporte" type="text">
 					</div>
 				</div>
                 <div class="form-group">
                     <label class="col-md-2 control-label">Cuentas del reporte</label>
                     <div class="col-md-10">
-                          <select name="sel_ingresos" data-placeholder="Eija la cuenta" style="width:100%;" multiple class="chosen-select">
+                          <select name="sel_ingresos" data-placeholder="Eija la cuenta" style="width:450px;" multiple class="chosen-select">
                                        {{for cc in cc_empresa:}}
                                            <option value="{{=cc[3]}}">{{=cc[0]+' '+cc[1]}}
                                            </option>
@@ -76,18 +76,18 @@
                       </div>
                 </div>
             </fieldset>
-            <div class="form-actions">
-            <div class="row">
-            <div class="col-md-12">
-            <button class="btn btn-default" type="submit"> Cancelar </button>
-            <button class="btn btn-primary" id="btn_enviar">
-            <i class="fa fa-save"></i>
-            Enviar
-            </button>
-            </div>
-            </div>
-            </div>
-        </form>
+            <fieldset>
+            <div class="form-group">
+                <label class="col-md-2 control-label"></label>
+                    <div class="col-md-10">
+                        <button class="btn btn-default" type="submit"> Cancelar </button>
+                        <button class="btn btn-primary" id="btn_enviar">
+                        <i class="fa fa-save"></i>
+                            Enviar
+                        </button>
+                   </div>
+            </fieldset>
+          </form>
     </div>
                                                         
     <!-- widget div-->
