--- a/views/reportes/estado_resultados.html
+++ b/views/reportes/estado_resultados.html
@@ -109,7 +109,9 @@
                 "bSort": false,
                 "aoColumnDefs": [
                      { 'bSortable': false, 'aTargets': [0,1,2,3,4] }
-               ]
+                ],
+                "aLengthMenu": [[10, 25, 50, 100, 200, -1], [10, 25, 50, 100, 200, "Todos"]],
+                "iDisplayLength":50
 			});
 	
 			/* END BASIC */
